@@ -9,6 +9,7 @@ AM_MAINTAINER_MODE
 AC_ISC_POSIX
 AC_PROG_CC
 AM_PROG_CC_STDC
+AM_PROG_CC_C_O
 AC_HEADER_STDC
 
 
@@ -109,6 +110,8 @@ AC_ARG_ENABLE(caching,
 if test $usecache != yes; then
 	GECKO_CFLAGS="$GECKO_CFLAGS -DDISABLE_CACHE"
 fi
+
+AC_REPLACE_FUNCS([memmem])
 
 AC_OUTPUT([
 Makefile
